--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="renderer" content="webkit">
 	<title>专业交易</title>
-	<script src="/static/assets/kline/sockjs.js"></script>
-	<script src="/static/assets/kline/stomp.js"></script>
 	<script src="/static/assets/kline/jquery.js"></script>
 	<script src="/static/assets/kline/jquery.mousewheel.js"></script>
 	<script src="/static/assets/kline/kline.min.js"></script>
