--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="renderer" content="webkit">
+	<meta name="force-rendering" content="webkit">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="full-screen" content="yes">
+	<meta name="x5-fullscreen" content="true">
 	<title>专业交易</title>
 	<script src="/static/assets/kline/jquery.js"></script>
 	<script src="/static/assets/kline/jquery.mousewheel.js"></script>
